--- a/faq.html
+++ b/faq.html
@@ -300,7 +300,7 @@ z-index: 3;
 </center>
 <br><br><br>
 
-<a href="#tumblr"><font color="#d8b6b6">info about my tumblr</font></a><font color="#aa8f8f"> | </font><a href="#name"><font color="#d8b6b6">about my name</font></a><font color="#aa8f8f"> | </font><a href="#myself"><font color="#d8b6b6">about myself</font></a><font color="#aa8f8f"> | </font><a href="#argumentation"><font color="#d8b6b6">about my argumentation</font></a><font color="#aa8f8f"> | </font><a href="#dx"><font color="#d8b6b6">about self dx</font></a><font color="#aa8f8f"> | </font><a href="#agere"><font color="#d8b6b6">about agere &
+<a href="#name"><font color="#d8b6b6">about my name</font></a><font color="#aa8f8f"> | </font><a href="#myself"><font color="#d8b6b6">about myself</font></a><font color="#aa8f8f"> | </font><a href="#argumentation"><font color="#d8b6b6">about my argumentation</font></a><font color="#aa8f8f"> | </font><a href="#dx"><font color="#d8b6b6">about self dx</font></a><font color="#aa8f8f"> | </font><a href="#agere"><font color="#d8b6b6">about agere &
  communities</font></a><font color="#aa8f8f"> | </font><a href="#words"><font color="#d8b6b6">about controversial words</font></a><font color="#aa8f8f"> | </font><a href="#numbers"><font color="#d8b6b6">about numbers</font></a><font color="#aa8f8f"> | </font><a href="#politics"><font color="#d8b6b6">about politics</font></a><font color="#aa8f8f"> | </font><a href="#internet"><font color="#d8b6b6">my internet past</font></a><font color="#aa8f8f"> | </font><a href="#pics"><font color="#d8b6b6">about disliking pics</font></a><font color="#aa8f8f"> | </font><a href="#cc"><font color="#d8b6b6">ccs, ids & kins</font></a><font color="#aa8f8f"> | </font><a href="#gxb"><font color="#d8b6b6">about girls x boys</font></a><font color="#aa8f8f"> | </font><a href="#astro"><font color="#d8b6b6">about astrology & similar</font></a><font color="#aa8f8f"> | </font><a href="#beauty"><font color="#d8b6b6">some beauty talk</font></a><font color="#aa8f8f"> | </font><a href="#fashion"><font color="#d8b6b6">some fashion talk</font></a><font color="#aa8f8f"> | </font><a href="#sexuality"><font color="#d8b6b6">about sexuality</font></a><font color="#aa8f8f"> | </font><a href="#purity"><font color="#d8b6b6">purity & innocence</font></a><font color="#aa8f8f"> | </font><a href="#media"><font color="#d8b6b6">social media issues general</font></a><font color="#aa8f8f"> | </font><a href="#live"><font color="#d8b6b6">about disliking lives</font></a><font color="#aa8f8f"> | </font><a href="#honest"><font color="#d8b6b6">honest opinion</font></a><font color="#aa8f8f"> | </font><a href="#cruelty-free"><font color="#d8b6b6">cruelty-free lifestyle</font></a><font color="#aa8f8f"> | </font><a href="#money"><font color="#d8b6b6">about money</font></a><font color="#aa8f8f"> | </font><a href="#individuality"><font color="#d8b6b6">about individuality</font></a><font color="#aa8f8f"> | </font><a href="#presence"><font color="#d8b6b6">about presence</font></a><font color="#aa8f8f"> | </font><a href="#immigration"><font color="#d8b6b6">about ( my ) immigration</font></a><font color="#aa8f8f"> | </font><a href="#religion"><font color="#d8b6b6">my religion</font></a><font color="#aa8f8f"> | </font><a href="#ruules"><font color="#d8b6b6">about rules</font></a><font color="#aa8f8f"> | </font><a href="#femininity"><font color="#d8b6b6">cuteness & femininity</font></a><font color="#aa8f8f"> | </font><a href="#group"><font color="#d8b6b6">group behavior</font></a><font color="#aa8f8f"> | </font><a href="#html"><font color="#d8b6b6">about web design</font></a><font color="#aa8f8f"> | </font><a href="#mybeauty"><font color="#d8b6b6">my beauty care</font></a><font color="#aa8f8f"> | </font><a href="#world"><font color="#d8b6b6">about this beautiful world</font></a><font color="#aa8f8f"> | </font><a href="#selfcare"><font color="#d8b6b6">about self care</font></a><font color="#aa8f8f"> | </font><a href="#trauma"><font color="#d8b6b6">trauma coping issues</font></a><font color="#aa8f8f"> | </font><a href="#virtual"><font color="#d8b6b6">virtual world issues</font></a><font color="#aa8f8f"> | </font><a href="#rivalry"><font color="#d8b6b6">the girls' rivalry</font></a><font color="#aa8f8f"> | </font><a href="#role"><font color="#d8b6b6">role in life</font></a><font color="#aa8f8f"> | </font><a href="#ego"><font color="#d8b6b6">fragility of the ego</font></a><font color="#aa8f8f"> | </font><a href="#age"><font color="#d8b6b6">age differences</font></a><font color="#aa8f8f"> | </font><a href="#ib"><font color="#d8b6b6">imageboards issues</font></a><font color="#aa8f8f"> | </font><a href="#pet"><font color="#d8b6b6">about pet buying</font></a>
 <br>
 <br><br>
@@ -320,41 +320,6 @@ but please don't question me about supporting or not movements and communities, 
 <br><br><br><br><br><br>
 </font>
 
-
-<a name="tumblr" id="tumblr"></a>
-<sub><sub><img src="https://i.imgur.com/xuXKSIc.gif"></sub></sub><font color="#c4afa8">　what is my "about" on tumblr ?</font><br><br><br>
-<font color="#d8b9af">　( august . 31 . 2017 + january . 04 . 2018 )</font>
-<br><br>
-<font color="#B1A69E">
-it's very common to see specifications of what kind of aesthetics and content you post and what kind of people you accept interaction with. some of you are curious about my specifications and ask in my tumblr, which is related to my main facebook page too, since the aesthetics are similar.<br>
-so here i am to clarify some things about the aesthetics that i post on my main tumblr, and what kind of blogs i usually follow and interact :<br>
-<br>
-♡　i usually reblog babycore, angelcore, teddycore, webcore, lovecore, cleancore + all kind of nostalgia & vintage stuff ( anything that is comfy and cute for me, because i make my blog a safe space ). i don't tag aesthetics, but everything is really organized and matching so i think tagging is unnecessary.<br>
-<br>
-♡　my tumblr is not a kin blog nor an age regression blog and i am not part of any community, but i interact with age regression blogs from sfw communities. i don't usually interact or accept interactions with kink blogs, because these people can be dangerous.<br>
-<br>
-♡　sometimes, i follow trauma blogs. they have negative content from time to time and even nsfw content, but i don't usually interact with that kind of content, just the posts i consider related to what i'm feeling at the moment. trauma blogs sometimes make me feel comfortable and helps me deal with bad memories.<br>
-<br>
-♡　i interact and follow blogs with nudity, usually renaissance paintings, which i love so much ! i don't interact with porn blogs, and i usually block the ones i consider wrong.<br>
-<br>
-♡　i consider my blog really sfw, unless you consider renaissance paintings and some small bruises nsfw. in this case, i'm really really sorry, but i don't use tags, because it would be so stressful and time-consuming for me. so please be careful about body image, gifs, bruises, religious images, medicine, bugs, dolls and other triggers. everything i've quoted is posted cautiously and infrequently + my blog is drama-free !<br>
-<br>
-♡　i can't do personal posts because it would be extremely uncomfy for me, i just post personal stuff here on my website !!<br>
-<br>
-♡　i'm sorry, but i really can't reblog promos or do ask / tag games ( i just don't want my blog to be very personal, sorry /// you all are so lovely ; ; ) but it really warms my heart when people tag me in all kind of cute stuff, please feel free to send me everything you think i would like.<br>
-<br>
-♡　i can't pay attention to every single interaction, but i try my best to make sure i never reblog from bad people. if i interact with someone who is really toxic please tell me quickly, this is very important to me.<br>
-<br>
-♡　you are free to unfollow me, softblock to break mutuals or just hardblock me ! i just want you to be comfortable.<br>
-<br>
-♡　i always always read links and i interact with most personal posts i see, sometimes i can't because i'm too shy, i'm sorry ; ;<br>
-<br>
-♡　i absolutely love all my mutuals !!!!<br>
-<br>
-<br>
-i think this is enough to clarify your doubts !
-<br><br><br><br><br><br>
-</font>
 
 <a name="name" id="name"></a>
 <sub><sub><img src="https://i.imgur.com/xuXKSIc.gif"></sub></sub><font color="#c4afa8">　what is my name ?</font><br><br><br>
