--- a/archive.html
+++ b/archive.html
@@ -1682,40 +1682,7 @@ don't keep compliments just for yourself, let who you love know how much you lov
 <br>
 so today i'm going to post here updates of the last two projects, because yes, i updated them all !<br>
 and i intend to continue updating from time to time, but i will give myself some time to rest because i really worked hard doing all this <img src="https://i.imgur.com/aTV14Rn.gif"/><br>
-for the soft collection i did a little "study" with a drawing of <i>umibenobochi</i>.<br>
-the soft girl featured this time is 142 ♡<br>
-i painted with pastels and added different types of paper and also a satin ribbon :<br>
-<br><br>
-
-<center><img width="350px" height="auto" src="https://i.imgur.com/TjFIObk.png"/></center>
-</font></font></font>
-<br>
-<center>
-<body>
-<style>
-yay { cursor: pointer; }
-</style>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<img width="20px" height="auto" src="https://i.imgur.com/kfD2kLD.gif"/>&nbsp;&nbsp; { &nbsp;1492&nbsp; } &nbsp;
-</font></font>
-</div>
-</body>
-<body>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<img width="20px" height="auto" src="https://i.imgur.com/ft0nNbC.gif"/>&nbsp;&nbsp; { &nbsp;1&nbsp; } &nbsp;
-</font></font>
-</div>
-</body></center>
-
-<font size = 1><font color="#B1A69E">
-<br><br>
-i really liked the result, this simple style gives enough freedom to play with different elements !<br>
-it's a pity that my camera is so bad, it doesn't look so cute in the picture <img src="https://i.imgur.com/59FmGeU.gif"/><br>
-i want to get a better camera soon ///<br>
-<br>
-the next thing will be a remix for moep. i have two, but i chose my fav one to post here, since i have posted too many songs lately ( do you like it ? )<br>
+this is a remix for moep. i have two, but i chose my fav one to post here, since i have posted too many songs lately ( do you like it ? )<br>
 so here you have <i>lucky vacuum</i> and loooots of love ♡ ♡ ♡ !!<br>
 <br><br>
 
@@ -1927,37 +1894,8 @@ yay { cursor: pointer; }
 it's very simple but i honestly love it, dress up flash games always make me nostalgic ; ;<br>
 i hope you like it too !!<br>
 <br>
-now, after a while, i made a very beautiful papercraft :<br>
-<br><br>
-
-<center><img width="350px" height="auto" src="https://i.imgur.com/oNny6F9.png"/></center>
-</font></font></font>
-<br>
-<center>
-<body>
-<style>
-yay { cursor: pointer; }
-</style>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<img width="20px" height="auto" src="https://i.imgur.com/kfD2kLD.gif"/>&nbsp;&nbsp; { &nbsp;1481&nbsp; } &nbsp;
-</font></font>
-</div>
-</body>
-<body>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<img width="20px" height="auto" src="https://i.imgur.com/ft0nNbC.gif"/>&nbsp;&nbsp; { &nbsp;1&nbsp; } &nbsp;
-</font></font>
-</div>
-</body></center>
-
-<font size = 1><font color="#B1A69E">
-<br><br>
-it's a train !! how cool is that ?<br>
-i realized a few days ago that my printer is out of ink, i wanted to print more papercrafts and saved a lot of things.. it was a bad surprise <img src="https://i.imgur.com/uNMeNH7.gif"/><br>
-<br>
-matching the cute frogs of today, a very magical & marshy melody :<br>
+i realized a few days ago that my printer is out of ink, i wanted to print a lot of papercrafts and saved a lot of things.. it was a bad surprise <img src="https://i.imgur.com/uNMeNH7.gif"/><br>
+but i did something else to show you ! matching the cute frogs of today, a very magical & marshy melody :<br>
 <br><br>
 
 <center><a href="https://files.catbox.moe/xxc193.mp3" id="linkbjinho" target="_blank">will-o'-the-wisp .mp3</a></center>
@@ -4701,7 +4639,7 @@ i have here today a drawing that i painted a few days ago ! this one is very cle
 <br><br>
 </font></font></font>
 
-<center><img width="350px" height="auto" src="https://i.imgur.com/kkQf5Ix.png"/></center>
+<center><img width="350px" height="auto" src="https://i.imgur.com/ZswWHjM.png"/></center>
 
 <br>
 <center>
@@ -4825,7 +4763,7 @@ i've been practicing embroidery, for ideas i scribbled some cute little things i
 <br><br>
 </font></font></font>
 
-<center><img width="350px" height="auto" src="https://i.imgur.com/W8C7LQa.png"/></center>
+<center><img width="350px" height="auto" src="https://i.imgur.com/OCWartx.png"/></center>
 
 <br>
 <center>
