--- a/archive.html
+++ b/archive.html
@@ -4786,12 +4786,12 @@ i've been practicing embroidery, for ideas i scribbled some cute little things i
 <br><br>
 as you may have noticed, i am addicted to teddy bears. really, i draw teddies everywhere <img src="https://i.imgur.com/p36H6un.gif"/><br>
 <br>
-some of you know, i have <a href="https://www.yourworldoftext.com/~mimipot/comfymilk" id="linkbjinho" target="_blank">a little world</a> on the yourworldoftext.com, which i put cute ascii art and unicodes.<br>
+some of you know, i have a little world on the yourworldoftext.com, which i put cute ascii art and unicodes.<br>
 based on other versions, i created my own version of this site, but offline. you can test things here and create little worlds. i have an exported page, so you can test how the process of importing and exporting worlds works :
 <br>
 <br><br>
 
-<center><a href="https://files.catbox.moe/hu9r85.rar" id="linkbjinho" target="_blank">offline ywot .rar</a></center>
+<center><a href="https://files.catbox.moe/64lkgx.rar" id="linkbjinho" target="_blank">offline ywot .rar</a></center>
 </font></font></font>
 <br>
 <center>
