--- a/portfolio.html
+++ b/portfolio.html
@@ -342,7 +342,7 @@ z-index: 3;
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> web design<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/jfEMOrb.png"><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/dQayP38.png"><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/GJqX3Fp.png"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/4t3RoGq.png"><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/rwF28fo.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
