--- a/blog.html
+++ b/blog.html
@@ -317,6 +317,60 @@ font-family: Verdana;
 </style>
 <div id="coisinhos">
 
+<center><img src="https://i.imgur.com/g1WEZen.png"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>july . 19 . 2019</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiiii fluffies <img src="https://i.imgur.com/7o5RJUW.gif"/><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i'm proud of myself ♡ !!
+i've been making a lot of progress in my projects and improving <img src="https://i.imgur.com/QQu4TEN.gif"/>
+i hope i can keep this productive mood so i can be rewarded in my bday, that is coming soon ~ 
+please don't forget to check out <a text-decoration: none; href="https://shybunny.middlepot.com" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 1px; font-size:10px;">my online store</font></a>, i need support to buy more crafting supplies ♡♡
+i'm gonna add new stuff very soon, next post i'll show you the best things i made <img src="https://i.imgur.com/C8mN7yZ.gif"/>
+
+my accounts have been growing a lot lately and it makes me really happy.. i have no words to explain ; ;
+i love making content that make people smile, i try my best to keep my accounts helpful & safe for everyone ...
+i don't believe in taking numbers as a sign that i'm being sucessful, but i've been checking my followers frequently and removing all the creeps and ghosts, i want all of my followers to be real people that are truly interested in my content !
+besides being only mutuals with friends, i can safely say that i really appreciate every single person that interact with my posts ♡
+all of my comfy & positive content is made with my honest feelings, so yes, i am happy that my accounts are growing !!
+i can reach all of these lovely people with my stuff, it's surely a good thing, it's exactly the reason why i keep my accounts and don't just post everything in this website.
+sadly, personal websites are not that popular nowadays, so if i want to really help people in some way i need to keep some social media accounts ..
+tumblr is my fav place to post images in original quality ; youtube is my fav place to make playlists ; twitter is my fav place to post ascii art ; instagram is my fav place to post interactive content .
+i really want to post all of these things, to inspire and make people smile with these things.. !
+if i can't reach many people by simply posting everything in my website, i am keeping these accounts happily until the day i feel that they're not useful anymore ♡
+
+btw, recently i've been getting tired of my tumblr layouts, so i decided to finally make some new ones !
+i'm so happy with these, it warms my heart ..</pre><br>
+<br><br>
+
+<center><img width="370px" height="auto" src="https://i.imgur.com/K3GRsRj.png"/></center><br><br>
+<center><img width="370px" height="auto" src="https://i.imgur.com/viLIPsP.png"/></center><br>
+
+</font></font></font>
+<br>
+
+<font size = 1><font color="#B1A69E">
+<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+do you like it ? <img src="https://i.imgur.com/nMbwy3K.gif"/>
+even if i'm not very used to make tumblr layouts, i could manage to make these work well...
+i kinda made a mess with the codes, i don't feel very confident to make these for other people ///
+but i really like making layouts outside platforms so if you want to have a cute website remember that commissions are open ♡
+
+that's it for today, now i'm gonna embroider a little bit.. wish me luck <img src="https://i.imgur.com/6yh79YL.gif"/>
+
+xoxo <img src="https://i.imgur.com/hhsqaw6.gif"/></pre><br>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/g1WEZen.png"/></center>
+
+<br><br><br>
+
 <center><img src="https://i.imgur.com/VWH6o24.gif"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
@@ -442,93 +496,6 @@ xoxo <img src="https://i.imgur.com/rJeTQUr.gif"/><br>
 
 <center><img src="https://i.imgur.com/AUebzYL.gif"/></center>
 
-<br><br><br>
-
-<center><img src="https://i.imgur.com/02mv4Oo.gif"/></center>
-<br><br>
-<font size = 1><font color="#CBBBB1">
-<center>april . 30 . 2019</center>
-</font></font></font>
-<font size = 1><font color="#B1A69E">
-<br>
-hiii fluffies <img src="https://i.imgur.com/6bJBd0e.gif"/><br>
-have you been doing your best ?<br>
-i've been.. doing a lot ...<br>
-i finally opened commissions for website layouts, as you can see on the index page !<br>
-i really love web design, but i never felt really like people would really want to pay for my work..<br>
-well, after receiving so many questions about my website and how i make it, i decided to open myself to it and did my first commission ♡ !!!<br>
-i'm really proud of myself, now i can work hard to make people happy in other ways besides my current projects.<br>
-<br>
-i also opened a <a id="linkzinho" href="https://ko-fi.com/middlepot" style="text-decoration: none; color:#d16e9b;" target="_blank">ko-fi</a> account, since i really am in need of some money right now for buying a new laptop.. it's been hard working with it, but i'm doing my best ; ;<br>
-i have some active projects rn and some more to come that i'm working with, so if you like any of my works please consider supporting me.. ! it would mean the world to me, and help a whole lot.<br>
-remember you can now also support me by buying a <a style="text-decoration: none; color:#d16e9b;" id="linkzinho" href="https://middlepot.com/commissions" target="_blank">layout commission</a> or if you're from brazil, buying something from my <a id="linkzinho" href="https://shybunny.middlepot.com" style="text-decoration: none; color:#d16e9b;" target="_blank">online store</a> !<br>
-( you can also buy small items on the shy bunny store if you live overseas, just please consider the long delivery time )<br>
-<br>
-i appreciate a lot all the supporting messages i receive from you all and i want to keep going with my current works, even if most of them don't give me any profit, i still keep going with all my love and dedication <img src="https://i.imgur.com/OhHUZZE.gif"/><br>
-i know some of my projects have been stagnant, but i'm not giving up on them, don't worry !<br>
-i'm just focusing on my main ones right now, but i will surely take some time for everything i planned.<br>
-if you want to see something specifically here or in my accs, please contact me and i will certainly consider it ♡<br>
-<br>
-eee now, i have today a very cute html page i've been wanting to do for.. a week LOL<br>
-it's "my simulation of the perfect imageboard for me"<br>
-i out of nowhere wanted to do it because i was remembering all the time i spent on imageboards when i was younger and i always wanted to make a cute and positive one ~<br>
-( i don't think people would even enter it actually, it's too girly )<br>
-by the way, the q&a today will be about imageboards ! i wanted to talk about it because most people don't really understand the point of these sites and think they're just bad, but it's not really like that.<br>
-it's complicated, and i stopped using them for a long time now, but i certainly miss exchanging content and stories with all the interesting people i could find on the weirdest boards !<br>
-i specially liked threads about "trying to find" specific content or observing bizarre communities... these became renegade thread themes on ibs over time, and i don't know why, since these were so much fun ??<br>
-people seem to only like talking about boring stuff now.. ughie <img src="https://i.imgur.com/dATVv1g.gif"/><br>
-well, enough of talking, here :<br>
-<br><br>
-
-<center><img width="350px" height="auto" src="https://i.imgur.com/soq1kPL.png"/></center><br>
-<center><img width="350px" height="auto" src="https://i.imgur.com/K0ScsP4.png"/></center><br>
-<center><img width="350px" height="auto" src="https://i.imgur.com/jVjbILC.png"/></center><br>
-<br><br>
-<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://files.catbox.moe/nq4oo2.rar" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">pufchan .rar</font></a>　</center>
-</font></font></font>
-<br>
-
-<font size = 1><font color="#B1A69E">
-<br><br>
-i think pufchan is adorable ..<br>
-it's obviously a fake imageboard, you can't post anything, it's just visuals !<br>
-the layout is inspired by futaba, which i believe it's the first "chan". i love the 90s look of it, despite it being born in 2001 ♡<br>
-i'm sorry about my weird japanese, i just wanted to make some inside jokes there LOL<br>
-i was not very creative about the domain this time, but here we go : pufchan.fr.to<br>
-<br>
-do you like it ? would you use it ?<br>
-only cuteness allowed <img src="https://i.imgur.com/uFeVUJn.gif"/><br>
-<br>
-now let's go to the q&a and continue the subject..<br>
-<br><br>
-<center><sub><sub><img src="https://i.imgur.com/d81T42M.gif"/></sub></sub>　<b>q & a</b>　<sub><sub><img src="https://i.imgur.com/gCof63R.gif"/></sub></sub></center>
-<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-
-i have seen many people saying that imageboards are toxic and hateful environments. i have had particularly varied experiences in such environments, not just ibs but other places that are also open to different subjects, and because these are anonymous environments, it is easy to see people saying hateful thoughts...
-such people may or may not have gone through difficult things in life and they feel the need to vent terrible things on the internet. i consider myself a very patient person with open environments like this, because i've already been able to talk about very interesting and fun subjects with good-hearted people in places like this. it is possible to have good experiences !
-currently, i have found it VERY difficult to find good content, as these places have become the focus of hate texts. i definitely do not support or pay attention to this sort of thing, since it doesn't do any good for anyone.
-i used to go to these places with some frequency because it was easy to find ibs where the anonymity was absolute, that is, it was not spoken in gender or any subject that revealed particularities about the users. this avoided most of the unpleasant and problematic issues, leaving room for healthy and interesting discussions. i learned a lot and met very nice people in these spaces. unfortunately, it is a rarity now, and so i consider that the ibs are dead practically all over the world.
-many people say they see clear rejections in specific places against groups of people. this is real, but not just in anonymous places, i've seen it all over the internet ( and out of it too ) !!
-something very common to see is the classic boys x girls, right x left and other things like that ; ;
-if you pay attention, you will find all sorts of people rejecting and avoiding contact with other types of people, because they had bad experiences multiple times. this is basically it. i believe that any passive or aggressive rejection against people by their sex, beliefs, tastes, thoughts, is the fruit of past bad experiences. i don't like to judge people by such attitudes as long as they can be understanding, i think no one need to accept interactions with people who don't want to, i think it's important to respect environments made for a specific type of audience. i've never disrespected public rules anywhere because it seems to me too immature to force your presence into places where you're not welcome just to be "edgy" or "revolutionary" ; it's disrespectful to use personal information as an advantage in anonymous places, i don't support this. but obviously i can't stand threatenings or hate texts, as this is sick and negative, i don't like any toxic environment !
-i really value respect among people and believe that anonymity should serve to make people "impartial" and away from judgments, to say what they really think, so that it can be productive for the personal development of everyone. it is possible to exchange good arguments and spend good moments of entertainment and learning with people if they respect each other and don't judge for personal details. i believe that anonymity makes environments nicer for complicated topics, an environment becomes pure from the moment people don't have personal information about each other.
-please don't be hateful, please don't be mean !! it's hard to deal with differences, but people are not supposed to hate each other. everyone is different and have problems, and that's okay. you don't have to interact with people you don't like, but it's not right to write hate texts ; ;
-so i support anonymous discussion environments, and the respect. my good experiences were much more relevant than the bad ones, although i had a hard time finding interesting subjects on the internet, i know it's possible !
-unfortunately the ibs have become a very dirty place in recent years, frequented by frustrated teenagers who want to feel special and part of some sort of "secret movement" that rules the world through memes... seriously. although i believe myself in the power of memes and the internet, using it to feel better than others is pathetic.
-and, fortunately, i still know other places on the internet that are good for that kind of healthy interaction that i quoted above ♡ ! there are not many, but i really like them. things really are temporary, so it's not healthy to keep complaining, right ?
-by the way i really don't care about the reputation of the places on the internet, to be honest, so i'm always open to experiencing things before judging them by the contents that spread out there. for example, tumblr has a very dubious and embarrassing reputation, but i have used it for many years and absolutely love the beautiful and interesting content that i find exclusively there. people simply should try before saying anything.
-</pre>
-<br>
-mm.. people can be very judgmental with some places on the internet without any real experience so i think it's fair to give my opinions about it !<br>
-<br>
-<br>
-xoxo <img src="https://i.imgur.com/k9ihrza.gif"/><br>
-<br><br>
-</font></font></font>
-
-<br>
-
-<center><img src="https://i.imgur.com/02mv4Oo.gif"/></center>
 
 <br><br><br>
 
