--- a/faq.html
+++ b/faq.html
@@ -572,7 +572,7 @@ i know it is important, but i don't feel comfortable posting opinions on subject
 
 <a name="internet" id="internet"></a>
 <sub><sub><img src="https://i.imgur.com/xuXKSIc.gif"></sub></sub><font color="#c4afa8">　how was my past on the internet ?</font><br><br><br>
-<font color="#d8b9af">　( october . 21 . 2017 + february . 04 . 2019 )</font>
+<font color="#d8b9af">　( october . 21 . 2017 + july . 19 . 2019 )</font>
 <br><br>
 <font color="#B1A69E">
 what did i do on the internet before starting the projects and this website ?<br>
@@ -633,10 +633,11 @@ over time, the internet has been changing ... the blogs became unpopular, forums
 i then looked for substitutes for the things i liked : i tried using facebook to replace orkut, but no one else cared about the glittery cute things and i was disappointed.<br>
 i started using tumblr, which was well customizable and could fill the void that blogs left behind. it worked, even if it took a long time to find an aesthetic that would make me really happy, so i did several blogs until i got to my recent one ( it was during this time that i created the name middlepot ).<br>
 my recent one, was done together with a friend of mine, who also made with me the not bad fb page, which should have the same aesthetics. but she and i had very different opinions of what we wanted to do and she'd post things that i didn't like, both on the tumblr and on the page ... it became a mess, and we ended up giving up doing it together. i'd like to talk more about it in another post, because it's a tricky subject ; ;<br>
-anyway, i deleted her posts from tumblr and facebook, and then i got to my actual project : a safe and comfy place !<br>
-the fb pages had this content, from tumblr ; but i no longer use fb and decided to continue the project on twitter, an extension of my main tumblr, a way to bring content to people who don't know it.<br>
-i also tried using instagram, and now i finally am happy about it because i started using my acc to promote self care and share tips and cute games with people.<br>
-i don't use any social media in a very personal way, because i'm used to the more open and customizable format the old internet had. tumblr was the place where i most adapted, but i still don't use it to post very personal content.<br>
+anyway, i deleted her posts from tumblr and facebook, and then i got to my actual project : safety & comfort !<br>
+i no longer use fb and decided to continue the project by keeping just the necessary accounts, separately :<br>
+tumblr is my place to post images in original quality ; youtube is my place to make playlists ; twitter is my place to post ascii art ; instagram is my place to post interactive content .<br>
+i don't use any social media in a very personal way because these are just for sharing content to inspire and make people smile with positivity !<br>
+it was hard deciding what i should do, i'm used to the more open and customizable format the old internet had... tumblr is the place where i most adapted, but i still don't use it to post personal content.<br>
 to replace the forums, i found other places on the internet where i could communicate with various types of people, where i always remain anonymous as usual.<br>
 to replace msn, which was the platform i always used to talk to my family and close friends, i decided to use line. line in my opinion resembles quite a lot of things, besides having super cute stickers and themes !!<br>
 i also decided to try out discord because of friends, who use it a lot.. it remembers me of the oldschool group chats, so i like it.. !<br>
@@ -645,10 +646,10 @@ but in spite of having some social media accs, other nice places on the internet
 so i did it, and here i am ♡ . * ･ ｡<br>
 the 7 y/o me would be really proud of everything i'm doing right now. this website is really my favorite place on internet !<br>
 it's all i wanted, here i can put together all the projects i do and all the content i like.<br>
+sadly, personal websites are not that popular nowadays, so if i want to really help people in some way i need to keep some social media accounts for reaching them ..<br>
 <br>
 <br>
-i hope this answers a few things about how i got here ! <br>
-and i wrote a lot, i hope it's not tiring to read ; ;
+i hope this answers a few things about how i got here !
 <br><br><br><br><br><br>
 </font>
 
