--- a/about.html
+++ b/about.html
@@ -55,9 +55,7 @@ background-color: #f9f0ed;
 border: 1px dotted #e2d5d0;
 }
 #linkbjinho { color: #bca7a7; padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
-#linkzinho { padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
-
-</style>
+#linkzinho { padding-bottom: 2px; border-bottom:1px dotted #c6a799; }</style>
 
 <!--
 tooooooooltip
@@ -273,9 +271,7 @@ z-index: 3;
 
 
 <div onselectstart="return false" id="menu1">
-<p style="font-size:10px;line-height:50%;"><br><br>
-
-　　　　<font color="#c6a799">ణ</font>　<a href="/about" style="text-decoration: none; color:#a3948d;">about</a><br><br><br>
+<p style="font-size:10px;line-height:50%;"><br><br>　　　　<font color="#c6a799">ణ</font>　<a href="/about" style="text-decoration: none; color:#a3948d;">about</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/links" style="text-decoration: none; color:#a3948d;">links</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/contact" style="text-decoration: none; color:#a3948d;">contact</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/credits" style="text-decoration: none; color:#a3948d;">credits</a><br><br><br>
@@ -350,13 +346,13 @@ p { margin: 0; }
 </center>
 
 <br>
-<center><font color="#efcfc6">♡ </font><font color="#8e7d7d">(﻿</font><font color="#efcfc6">〃</font>﻿<font color="#8e7d7d">´ ˘ `﻿</font><font color="#efcfc6">〃﻿ </font><font color="#a59490">bubu , fairies , softness , vanilla milk</font><br>
-<font color="#bca9a4">﻿﻿!! </font><font color="#8e7d7d">(﻿</font><font color="#efcfc6">〃﻿﻿</font><font color="#8e7d7d">`^´﻿</font><font color="#efcfc6">〃﻿ </font><font color="#bca9a4">loud noises , mean people</font><br></center>
+<center><font color="#efcfc6"><font style="font-size:11px">♡</font> </font><font color="#8e7d7d">(﻿</font><font color="#efcfc6">〃</font>﻿<font color="#8e7d7d">´˘`﻿</font><font color="#efcfc6">〃﻿ </font><font color="#a59490">bubu , fairies , softness , roll cake</font><br>
+<font color="#bca9a4">﻿﻿!! </font><font color="#8e7d7d">(﻿</font><font color="#efcfc6">〃﻿﻿</font><font color="#8e7d7d">`ˆ´</font><font color="#efcfc6">〃﻿ </font><font color="#bca9a4">loud noises , mean people</font><br></center>
 <br>
 <br><br>
 <font color="#ceaaa9">my goal is to live a beautiful life + spread happiness & comfort ഒ</font><br>
-<font color="#a08e8d">i have lots of hobbies, i don't do things perfectly but i work hard to improve on them. you're always welcome to give your opinion, after all i post things here to receive feedback !<br>
-i'm graduated in game design and i like to study languages, mythology, css and other things.</font>
+<font color="#a08e8d">i have lots of interests, i don't do things perfectly but i work hard to improve so i can help others through my works.. i aim to be the guardian angel that will guide good-hearted people to purity and innocence.<br>
+i'm a housewife, maid, magical nurse & wannabe internet idol graduated in game design ; i love to write, create little critters, bake, sew, study html + css, languages, mythology & other things !</font>
 <br><br><br>
 <font color="#827272">if you want more info about me and my stuff, please check out the </font><a style="color:#baa8a7;" href="https://middlepot.com/faq">faq</a>
 <br><br><br><br>
