--- a/fashion.html
+++ b/fashion.html
@@ -333,6 +333,12 @@ p { margin: 0; }
 <center>
 
 <br><br><br>
+<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 08.01.19 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
+<img width="220px" height="auto" src="https://i.imgur.com/j1ewq2s.png"/><br>
+<br>
+
+
+<br><br><br>
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 05.09.19 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
 <img width="220px" height="auto" src="https://i.imgur.com/iM3EPm2.png"/><br>
 <br>
@@ -378,12 +384,6 @@ p { margin: 0; }
 <br><br><br>
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 07.12.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
 <img width="220px" height="auto" src="https://i.imgur.com/Qe3RaGr.png"/><br>
-<br>
-
-
-<br><br><br>
-<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 06.19.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
-<img width="220px" height="auto" src="https://i.imgur.com/raiAd1e.png"/><br>
 <br>
 
 
