--- a/faq.html
+++ b/faq.html
@@ -444,23 +444,7 @@ i try to take care of myself the best i can. i hope to get a dx soon, because i 
 <font color="#d8b9af">　( september . 27 . 2017 + january . 22 . 2019 )</font>
 <br><br>
 <font color="#B1A69E">
-age play, ddlg / cgl, there is a fine line between pedophilia and those kinks. how to identify dangerous situations, dangerous people, what's the limit ?<br>
-i think the sex life between two adults, responsible for themselves, with consent, is something that allows things like kinks or lifestyles such as bdsm. any sub/dom relationship, have no relation whatsoever to incest or pedophilia. is something consented between two adults. anyway, it's a kink. in my opinion, kinks should in no way be publicly exposed, on the streets or on the internet, where children can see and be influenced. children can't have contact with these kind of things because it wouldn't be healthy.<br>
-this unfortunately is something that has happened very often, and even worse, added to age play : ddlg / cgl has reached many minors and many adult pedophiles have had contact with these children through kink communities.<br>
-these communities have become increasingly dangerous for minors, through the romanticization of pedophilia, child abuse and contact with kinks linked to childhood. even people who claim to be in a sfw ddlg / cgl community are not safe and are exposed to dangerous people as they use kink tags.<br>
-communities of age regression that work hard to be a truly safe environment for people who don't use the agere as something sexual, are  anti ddlg. many people have gone against this kink, because of exposure to minors. it has become something horrible and manipulative.<br>
-<br>
-i agree that it is really very dangerous to associate childhood with sexuality, even if those involved are adults, and i firmly believe that kinks shouldn't be publicly exposed for children to see. neither of them.<br>
-the only way to keep a kink safe and not harmful to anyone is without public exposure.<br>
-<br>
-　do i age regress ? am i part of a community ? am i in a relationship with a "caregiver" ?<br>
-<br>
-　❣ well, i don't think i really age regress, but i like doing some activities like coloring and making pillowforts... because it's just fun ♡<br>
-　❣ as i don't age regress, i am not part of any community. but i really like kidcore and age regression blogs, because they always make me feel so comfortable !<br>
-　❣ and, my bf, who i always call bubu ( boo boo, in case you don't know how to pronounce ) is not my caregiver, not in the agere way at least. but he takes good care of me, since i'm very sensitive and i get anxious about complicated "adult stuff", he always helps me a lot, he always makes me feel safe and i love him so much !!! ♡<br>
-<br>
-<br>
-<b>edit //</b> i've been thinking about age regression lately, because i really am into all kind of age regression activities and stuff.. but i still know that i don't really age regress, because i'm always like it.<br>
+i've been thinking about age regression lately, because i really am into all kind of age regression activities and stuff.. but i still know that i don't really age regress, because i'm always like it.<br>
 i don't really feel a difference when i'm coloring or eating using a cute spoon, because it's just my personality. i could say everytime i'm feeling comfy i'm regressed, but i don't really feel it as a thiiing, because it's just who i am.. !<br>
 i think age regression is valid, because it really is important for some people to find their purity and innocence again.. and i still really like being into agere activities and stuff, but i don't consider myself into the "little space" thing ( i'm talking about non kink age regression, i'm just using the expression.. ) because if so, i would constantly be into it, and the thing about regression is exactly the contrast between feeling adult and childish.<br>
 i have matured a lot and learned things through the time, but the way i see the world and my personality definitively is the same as ever, because this is exactly what i value !<br>
@@ -472,7 +456,22 @@ since i've remained the same, i don't feel the need to regress, because i'm alre
 if you have a hard time being yourself and feeling comfortable about your interests, personality and behavior, don't feel guilty about regressing.. there will be this contrast between feeling big and small that will make you feel like wanting to regress all the time, but someday you'll also feel always just like yourself, and be really happy about it ♡ !<br>
 it is possible to be pure, innocent, happy and comfy even as an adult.. and i'm trying my best to get there !!!<br>
 <br>
+　do i age regress ? am i part of a community ? am i in a relationship with a "caregiver" ?<br>
 <br>
+　❣ well, i don't think i really age regress because i don't enter a "mind space", but i do have "small" interests like coloring and making pillowforts... because it's just fun ♡<br>
+　❣ as i don't age regress, i am not part of any community,, but i identify with babycore and age regression blogs because they always make me feel so comfy & soft !<br>
+　❣ i consider bubu ( my love ) my caregiver in some way, because he takes good care of me since i'm very sensitive and get anxious about complicated "adult stuff", he always helps me a lot, keep me safe and i love him so much !!! ♡<br>
+<br>
+<br>
+<br><br>
+now, about age play, ddlg / cgl .. there is a fine line between pedophilia and those kinks. how to identify dangerous situations, dangerous people, what's the limit ?<br>
+i think the sex life between two adults, responsible for themselves, with consent, is something that allows things like kinks or lifestyles such as bdsm. any sub/dom relationship, have no relation whatsoever to incest or pedophilia. is something consented between two adults. anyway, it's a kink. in my opinion, kinks should in no way be publicly exposed, on the streets or on the internet, where children can see and be influenced. children can't have contact with these kind of things because it wouldn't be healthy.<br>
+this unfortunately is something that has happened very often, and even worse, added to age play : ddlg / cgl has reached many minors and many adult pedophiles have had contact with these children through kink communities.<br>
+these communities have become increasingly dangerous for minors, through the romanticization of pedophilia, child abuse and contact with kinks linked to childhood. even people who claim to be in a sfw ddlg / cgl community are not safe and are exposed to dangerous people as they use kink tags.<br>
+communities of age regression that work hard to be a truly safe environment for people who don't use the agere as something sexual, are  anti ddlg. many people have gone against this kink, because of exposure to minors. it has become something horrible and manipulative.<br>
+<br>
+i agree that it is really very dangerous to associate childhood with sexuality, even if those involved are adults, and i firmly believe that kinks shouldn't be publicly exposed for children to see. neither of them.<br>
+the only way to keep a kink safe and not harmful to anyone is without public exposure.<br>
 <br>
 before i finish here, i'd like to say something quick about melanie martinez. everyone knows that there is a direct connection with her and the children's exposure to the famous "daddy kink".<br>
 first of all, i would like to say that i particularly really like her instrumentals. but, i think her videos and lyrics a bit... dangerous. some of them are ok, but her most famous songs deal with trauma issues in a not very respectful way, and that really bothers me. i feel uncomfortable about it.<br>
