--- a/tinyjournal.html
+++ b/tinyjournal.html
@@ -316,6 +316,27 @@ welcome to the place where imagination and reality are mixed together !! i hope 
 <br><br>
 
 <div style="text-align:left">
+<center><font color="#aab0b7">
+<img src="https://i.imgur.com/i7IJQbR.png"><br><br>
+august . 08 . 2019<br>
+✄ floof
+</font>
+</center><font color="#bfc4c9">
+<br>
+　　if i'm feeling fluffy ,<br>
+　　　i sometimes go floof ,,<br>
+　　　　and i get some fuffos .<br>
+　　　　　fluffs are all i need ,<br>
+　　　　but i already have these ..<br>
+　　　so i get a little bit of foofu ,<br>
+　　and lots of happiness too ♡♡<br><br>
+</font>
+
+<br><br><br>
+<center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
+<br><br><br>
+
+<div style="text-align:left">
 <center><font color="#b79e96">
 <img src="https://i.imgur.com/B0R9I5n.png"><br><br>
 june . 14 . 2019<br>
@@ -432,26 +453,6 @@ october . 10 . 2018<br>
 　　soft = pure<br>
 　　soft = ♡♡♡<br>
 　　soft = myself !!!<br><br>
-</font>
-
-<br><br><br>
-<center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
-<br><br><br>
-
-<div style="text-align:left">
-<center><font color="#b79e96">
-<img src="https://i.imgur.com/B0R9I5n.png"><br><br>
-september . 13 . 2018<br>
-✄ i want to be comfortable
-</font>
-</center>
-<font color="#c9bcb1">
-<br><br>
-
-　　the only thing i really want is to feel comfortable constantly. i don't want to feel that i have to justify everything i do or cry for the mistakes of others. i don't want to feel like a bad girl when i don't reach unattainable expectations.<br>
-　　i want to feel comfortable being alive and in my body. i want to feel that everything is fine and that i'm safe all the time. i want to know that i'm perfect with my imperfections. i want to live fully and without regrets.<br>
-　　i want to realize that nothing can hurt me more than myself.<br>
-<br><br>
 </font>
 
 
