--- a/blog.html
+++ b/blog.html
@@ -317,6 +317,59 @@ font-family: Verdana;
 </style>
 <div id="coisinhos">
 
+<center><img src="https://i.imgur.com/auVtubS.png"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>august . 16 . 2019</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub><img src="https://i.imgur.com/kpgQWKv.gif"/></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+waaa middlepot.com is now 2 years old <font color="#d3a5a5" style="font-size:11px;">♡</font> !!
+and i am 22 .. this will be the year of the little swans <sub><img src="https://i.imgur.com/6B5aDBN.gif"/></sub>
+i'm very proud of all the effort i put in this website to keep it a nice place for me and you, reading this..
+i hope i can keep improving more & more, please keep supporting me <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
+all the love i receive will be forever cherished by me... i will never forget the messages, i will never stop trying my best to make you smile <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
+thank you ,, for everyting <sub><img src="https://i.imgur.com/Rwj4xOw.gif"/></sub>
+
+after a very energetic phase, my slow mood is back <sub><img src="https://i.imgur.com/tEm1jSL.gif"/></sub>
+i still keep doing my tasks, but i haven't really did much extra this month ~
+since august is a special month for me, i think it's a well deserved time for me to just relax, right ?
+but i hope i will feel motivated soon so i can keep going with my projects because i have lots of things i want to try out !!
+i have been sewing some things, but my big projects are staying still until i feel 100%
+maybe all i need is just going outside a little more <sub><img src="https://i.imgur.com/K6dVR8t.gif"/></sub>
+making good memories with bubu is always the best way to make me super motivated <font color="#d3a5a5" style="font-size:11px;">♡♡♡</font>
+
+so, as i said in the previous post i was trying some new embroidering techniques..
+i made two very cute frames with a teddy bear and a bunny :</pre><br>
+<br><br>
+
+<center><img width="370px" height="auto" src="https://i.imgur.com/yNFqGrB.png"/></center><br><br>
+<center><img width="370px" height="auto" src="https://i.imgur.com/HV5OX26.png"/></center><br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i really like it, i think it turned out so delicate .. <font color="#d3a5a5" style="font-size:11px;">♡</font>
+what do you think of these ? have you ever seen this kind of embroidering ?
+i wanted them to have lots of lace, ribbons and cute details
+these are on <a text-decoration: none; href="https://shybunny.middlepot.com" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 1px; font-size:10px;">my online store</font></a>, so go check it out !!
+
+that's about it for today.. !
+i hope you're treating yourself gently <font color="#d3a5a5" style="font-size:11px;">♡</font>
+you deserve kindness, don't ever forget !!
+
+xoxo <sub><img src="https://i.imgur.com/EvXCToz.gif"/></sub></pre>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/auVtubS.png"/></center>
+
+<br><br><br>
+
 <center><img src="https://i.imgur.com/g1WEZen.png"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
@@ -430,72 +483,6 @@ xoxo <img src="https://i.imgur.com/v8YK4Yq.gif"/></pre><br>
 <br>
 
 <center><img src="https://i.imgur.com/VWH6o24.gif"/></center>
-
-<br><br><br>
-
-<center><img src="https://i.imgur.com/AUebzYL.gif"/></center>
-<br><br>
-<font size = 1><font color="#CBBBB1">
-<center>may . 30 . 2019</center>
-</font></font></font>
-<font size = 1><font color="#B1A69E">
-<br>
-hiiii fluffies <img src="https://i.imgur.com/zbuThWK.gif"/><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-i think i've started existing in a new reality..
-the reality where the smaller things give me energy for avoiding all bad things with a smile !!!
-if even a cry baby like me can feel that confident i'm sure you reading it can, too <img src="https://i.imgur.com/lwGS7G2.gif"/>
-
-i'm currently in a lazy social phase where i want to talk with people, make friends, share memories together.. ♡ !!
-and, well.. i'm being really slow with my projects, but i'm trying my best to keep doing my weekly tasks anyways <img src="https://i.imgur.com/PZ7uiy2.gif"/>
-but of course socializing can be very stressful for me and that's why these phases just happen on internet so i can keep myself safe and cautious !
-i'll share with you some things i've learned the past weeks :
-
-ⅰ.　everyone deserves a chance !! even the weirdest people can turn out to be really nice, so even if someone seem weird give them a chance and be friendly !
-ⅱ.　in the other hand, some people who seem to be super nice can be meanies in the end of the day.. so always keep an eye open and don't go trusting people too quickly...
-ⅲ.　manipulative people don't deserve your friendship, stay far away from people who make you feel bad for receiving attention !!!
-ⅳ.　don't keep hate in your heart, let it go and be happy ! but never forget that bad people are bad and shouldn't be trusted. it's not your responsability to make them improve and accept them in your life, keep away and just hope for their best.
-
-mm as i said, i haven't been very good in making things lately... but i did something cute !
-i colored and made some edits in this adorable drawing from paper doll mate :</pre><br>
-<br><br>
-
-<center><img width="400px" height="auto" src="https://i.imgur.com/3c6jJvT.jpg"/></center><br>
-
-</font></font></font>
-<br>
-
-<font size = 1><font color="#B1A69E">
-<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-i'm very very proud and i think it would be such a cute wallpaper <img src="https://i.imgur.com/hBTS0bi.gif"/>
-
-i've been decorating my doll house, and it's becoming really cute.. ♡
-i will take pics once it's finished, but it will surely take a long while, many details ; ;
-
-so.. let's go for the q&a ! this one will be about something that always make me sad so i really feel the need to talk about !!</pre><br>
-<br><br>
-<center><sub><sub><img src="https://i.imgur.com/d81T42M.gif"/></sub></sub>　<b>q & a</b>　<sub><sub><img src="https://i.imgur.com/gCof63R.gif"/></sub></sub></center>
-<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-recently people have come to consider the process of buying and selling pets something wrong and disrespectful to them, "do not buy a friend", "there are many animals for adoption" ... but what's the real point in that ?
-only dogs and cats can be found for adoption, and only a few specific breeds, which makes some people very angry with who prefers to buy dogs or cats of other specific breeds. "all races are valid and deserve love" .. this is true, but i can't see the point in always putting down people who wish to have a specific breed animal, it's not a matter of disliking the other breeds, just choosing one ! just like you choosed to have a bunny instead of a hamster, it doesn't mean you hate hamsters.. hmpf
-the reason these dogs and cats are on the streets and consequently placed for adoption is our fault, and i believe they are disrespected precisely because they are put up for adoption and not sold like any other breed. they are treated different !! people don't take care of them properly and don't care if they're having lots of babies out there.
-all pets are sold for a certain amount of money, not because they are objects but because they are difficult and expensive to maintain. someone had to take care of the mom who had that animal, who was cared for with affection ( and money ) to one day be put up for sale. if you don't have the money to buy a pet, you certainly do not have the money to care for one, right ?
-the dogs and cats on the street are exactly the ones that are put to adoption for free and easily abandoned because people do not value their lives. i don't think they should be treated differently from any other animal that is sold, they should be sold too and be cared of the same way.
-it is true that some animals are used for money and people abuse that, so it is important to be sure who you are buying the animal for and if the person really is trustworthy but many animals are sold for high value because they are rare breeds or very difficult to care for.
-so.. i don't see any problem in selling animals except when the person is bad and wants to make money from the lives of animals in a disrespectful way, and i believe that adoption is not a really good thing as it makes these animals even more devalued ;;
-the life of an animal is precious, and if you are not willing to pay for it you simply do not deserve to have a pet !!
-</pre>
-<br>
-i hope i didn't come off as rude,, this subject hhh really bothers me .. !<br>
-<br>
-<br>
-xoxo <img src="https://i.imgur.com/rJeTQUr.gif"/><br>
-<br><br>
-</font></font></font>
-
-<br>
-
-<center><img src="https://i.imgur.com/AUebzYL.gif"/></center>
-
 
 <br><br><br>
 
